<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="20dp"
        android:text="Button"
        app:layout_constraintEnd_toStartOf="@+id/btnSpeedDial"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="94dp"
        android:layout_height="47dp"
        android:layout_marginBottom="184dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn0"
        app:layout_constraintVertical_bias="0.942"
        app:srcCompat="@android:drawable/stat_sys_phone_call" />

    <Button
        android:id="@+id/btnPlus"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/plus"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toStartOf="@+id/btn0"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn7"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="84dp"
        android:text="@string/_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSpeedDial" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="84dp"
        android:text="@string/_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginTop="28dp"
        android:text="@string/_1"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:text="@string/_4"
        app:layout_constraintEnd_toStartOf="@+id/btn5"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:text="@string/_0"
        app:layout_constraintEnd_toStartOf="@+id/btnHashTag"
        app:layout_constraintTop_toBottomOf="@+id/btn8" />

    <Button
        android:id="@+id/btn9"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="84dp"
        android:text="@string/_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn6" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:text="@string/_5"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:text="@string/_2"
        app:layout_constraintEnd_toStartOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/btn8"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="28dp"
        android:text="@string/_8"
        app:layout_constraintEnd_toStartOf="@+id/btn9"
        app:layout_constraintTop_toBottomOf="@+id/btn5" />

    <Button
        android:id="@+id/btn7"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:text="@string/_7"
        app:layout_constraintEnd_toStartOf="@+id/btn8"
        app:layout_constraintHorizontal_bias="0.742"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="226dp"
        android:layout_height="34dp"
        android:layout_marginTop="68dp"
        android:gravity="right"
        android:text="TextView"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toStartOf="@+id/btnDelete"
        app:layout_constraintHorizontal_bias="0.901"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnHashTag"
        android:layout_width="57dp"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="84dp"
        android:text="@string/hashtag"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn9" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="136dp"
        android:layout_marginEnd="8dp"
        android:text="Button"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.982"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSpeedDial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="Speed Dial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDelete" />

    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="49dp"
        android:layout_height="35dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_delete" />

</androidx.constraintlayout.widget.ConstraintLayout>